# oldknights

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  oldknights.cpp
include/: CMakeLists.txt
include/oldknights/: battleloop.hpp  combatant.hpp  combatantlist.hpp  error.hpp
src/: CMakeLists.txt  battleloop.cpp  combatant.cpp  combatantlist.cpp
test/: CMakeLists.txt  test_combatantlist.cpp
